--- a/1/mysite/templates/prize/index.html
+++ b/1/mysite/templates/prize/index.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-afasdfasdfa
-</body>
-</html>
+{% extends 'prize/base.html' %}
+
+
