--- a/1/mysite/templates/prize/login.html
+++ b/1/mysite/templates/prize/login.html
@@ -9,7 +9,7 @@
 {% block body %}
 <div class="wrap h580">
 <div class="loginItem auto ">
-   	<form class="loginBox" method="post" id="J_login">
+   	<form class="loginBox" method="post" id="J_login" action="{% url 'login' %}">
    		<div class="inline loginTitBox"><i class="inline loginListBg spIcon mg_r10"></i><span class="inline">用户登录</span></div>
 	   	<dl class="mg_t20 ">
 	   		<!-- <dt class="inline">手机号：</dt> -->
@@ -19,7 +19,7 @@
 	   	<dl class=" mg_t20 ">
 	   		<dd class="inline mg_r5">
 	   			<input id="passwd1" type="password" name="password" onblur="blankTest();" class="loginTxt w360 col_999 none">
-	   			<input id="passwd_show" type="text" value="请输入您的密码" class="loginTxt w360 col_999">
+	   			<input id="passwd_show" type="text"  value="请输入您的密码" class="loginTxt w360 col_999">
 	   		</dd>
 	        <dd class="J_validate inline col_f90"><i class="tip_erorr inline"></i>请输入密码且不能包含空格</dd>
 	   	</dl>
@@ -40,7 +40,7 @@
 	      	<dd class="J_loginTips inline "><span class="col_f90"></span></dd>
 	   	</dl>
 	  	<input type="hidden" id="returnUrlId" name="returnUrl" value="http://badge.biyao.com/man/index.html?f_upd=fb-170">
-	   	<input type="button" class="J_login_btn loginBtn w400  inline t_c mg_t10" value="登录"> <br>
+	   	<input type="button" class="J_login_btn loginBtn w400  inline t_c mg_t10" value="登录" id="loginButton"> <br>
 	   	<div class="w400 mg_t40">
 	   		<p class="sizeZero">
 	   			<span class="col_666 f14 mg_r10 inline">使用第三方账号登录：</span>
@@ -53,4 +53,135 @@
 		</form>
 </div>
 </div>
+
+
+ <script>
+function qqLogin(){
+	var returnUrl = $("#returnUrlId").val();
+	var url = "http://www.biyao.com/account/qqlogin.html?returnUrl="+returnUrl;
+	window.location.href=url;
+}
+</script>
+<script type="text/javascript">
+// 调用QC.Login方法，指定btnId参数将按钮绑定在容器节点中
+// 	QC.Login.getMe(function(openId, accessToken) {
+// 		$.ajax({
+// 			url:'/account/qqlogin.html',
+// 			data:{"openid":openId,"access_token":accessToken,"platform":"pc"},
+// 			dataType:'json',
+// 			type:'post',
+// 			async:false,
+// 			success:function(result){
+// 				if(result.success==1){
+// 					window.location.href=$("#returnUrlId").val();
+// 				}
+// 			},
+// 			error:function(XMLHttpRequest, textStatus, errorThrown){
+
+// 			}
+// 		});
+// 	});
+//登录 验证码
+
+</script>
+
+
+<script src="/statics/prize/js/common.js" type="text/javascript"></script>
+	<script type="text/javascript"	src="http://static4.biyao.com/pc/www/js/common.js?v=biyao_bd8bd36"></script>
+
+
+<script type="text/javascript">
+	$(function(){
+
+	 	 $(".loginTxt").focus(function(){
+				 if ($(this).val() == $(this)[0].defaultValue) {
+					    $(this).val("");
+				  }
+
+			});
+
+	 	 	$("#passwd_show").focus(function(){
+	 	 		$(this).addClass("none");
+	 	 		$("#passwd1").removeClass("none").focus();
+	 	 	});
+	 	 	$("#passwd1").blur(function(){
+	 	 		if ($.trim($(this).val()) == "") {
+		 	 		$("#passwd_show").removeClass("none");
+		 	 		$(this).addClass("none")
+		 	 	}
+	 	 	});
+			$(".loginTxt").blur(function(){
+				  if ($.trim($(this).val()) == "") {
+					    $(this).val($(this)[0].defaultValue);
+					   }
+			});
+	});
+
+</script>
+<script src="/statics/prize/js/validate.js"></script>
+<script type="text/javascript">
+	$(function(){
+		setTimeout(function(){
+			LT.temp.loginFn.changeVcode();
+		},100);
+
+		$('form').find("[name='checkRememberMe']").click(function(){
+			$(this).parent().toggleClass('checked');
+			if($(this).parent().hasClass('checked')){
+				$(this).next().text("请勿在公用电脑上勾选此选项");
+			}else{
+				$(this).next().text("下次自动登录");
+			}
+		})
+		LT.temp.loginFn.login($("#J_login"));
+		isLoginError();
+		$(".J_login_btn").click(function(){
+			isLoginError();
+		});
+		$("#imgChange").bind('click',function(){
+			LT.temp.loginFn.changeVcode();
+		});
+
+	})
+	function register(){
+		parent.window.open('http://www.biyao.com/account/register.html?returnUrl='+parent.window.location.href);
+	}
+	function findpwd(){
+		parent.window.open('http://www.biyao.com/findpwd/index?returnUrl='+parent.window.location.href);
+	}
+
+//判断是否显示验证码登录
+function isLoginError(){
+
+	if(parseInt($.cookie("loginErrorTimes"))>=2){
+
+			$("#authCode").removeClass("none");
+
+	}
+}
+
+
+
+</script>
+
+<script type="text/javascript">
+$(document).ready(function(){
+  $("#loginButton").click(function(){
+ // 下面这行代码就是你要的ID属性
+ $.post("demo_test_post.asp",
+  {
+    name:"Donald Duck",
+    city:"Duckburg"
+  },
+  function(data,status){
+    alert("Data: " + data + "\nStatus: " + status);
+  });
+
+});
+  });
+});
+</script>
+
+
 {% endblock %}
+
