--- a/1/mysite/templates/prize/base.html
+++ b/1/mysite/templates/prize/base.html
@@ -17,7 +17,7 @@
 <link href="/statics/prize/css/cm_www.css" rel="stylesheet" />
 <script type="text/javascript"	src="/statics/prize/js/jquery-1.8.3.js"></script>
 <script type="text/javascript"	src="/statics/prize/js/jquery.extention.js"></script>
-<script type="text/javascript" src="/statics/prize/js/lazyload.js8"></script>
+<script type="text/javascript" src="/statics/prize/js/lazyload.js"></script>
 <script type="text/javascript" src="/statics/prize/js/jquery.cookie.js"></script>
 
     {% endblock %}
