--- a/1/mysite/templates/prize/base.html
+++ b/1/mysite/templates/prize/base.html
@@ -61,8 +61,8 @@
 					<div class="app_box">
 						<span class="inline upArre"></span>
 						<div class="bg_fff down_list_box">
-							<a class="inline" href="/MyCenters/MyOrder.html">我的订单</a>
-							<a class="inline" href="/MyCenter/Profile.html">个人设置</a>
+							<a class="inline" href="{% url 'profile' %}">我的订单</a>
+							<a class="inline" href="{% url 'profile' %}">个人设置</a>
 						</div>
 					</div>
 				</li>
