--- a/1/mysite/templates/prize/profile.html
+++ b/1/mysite/templates/prize/profile.html
@@ -11,7 +11,7 @@
 			<div class="per_leftbox  pd_t14">
 				<ul class="per_leftul">
 					<li class="t_c">
-						<a href="/MyCenter/Profile.html">
+						<a href="{% url 'profile' %}">
 							<img src="http://img.biyao.com/files/temp/4b/4b1da817-808b-42//7dc4d96d-3221-44b1-98c9-f417114f88d6.png" alt="" onerror="javascript:this.src='http://static.biyao.com/pc/www/img/avatar/head_150.png'" style="width: 150px; height: 150px">
 						</a>
 					</li>
@@ -21,7 +21,7 @@
 			<div class="per_leftbox">
 				<div class="perleft_menu pdtb_20">
 				<ul>
-					<li class=" "><a href="/MyCenters/MyOrder.html"><i class="f_r mcMIcon3 inline"></i>我的订单</a> </li>
+					<li class=" "><a href="{% url 'MyOrder' %}"><i class="f_r mcMIcon3 inline"></i>我的订单</a> </li>
 					<li class=" "><a href="/MyCenters/MyRefunds.html"><i class="f_r mcMIcon4 inline"></i>退款管理</a></li>
 <!--<li class=" "><a href="/MyCenter/MyIncomeRules.html" ><i class="f_r mcMIcon5 inline"></i>我的收益</a></li>-->
 					<li class="a_check "><a href="/MyCenter/Profile.html"><i class="f_r mcMIcon8 inline"></i>个人设置</a></li>
@@ -34,14 +34,16 @@
 			</div>
 		</div>
 		<div class="per_right_out backg_fff">
+
+{% block profile %}
 	<div class="per_right ">
 		<div class="">
 			<div class="relative">
 				<h4 class="nTitle">个人设置</h4>
 				<h3 class="per_title">
-					<a class="a_checked" href="#"><span>个人信息</span></a>
-					<a href="/MyCenter/MyAddressManager.html"><span>管理收货地址</span></a>
-					<a class="bd_r_none" href="/MyCenter/ChangePassword.html" id="forgetPasswordID"><span>修改密码</span></a>
+					<a class="a_checked" href="{% url 'profile' %}"><span>个人信息</span></a>
+					<a href="{% url 'MyAddressManager' %}"><span>管理收货地址</span></a>
+					<a class="bd_r_none" href="{% url 'ChangePassword' %}" id="forgetPasswordID"><span>修改密码</span></a>
 				</h3>
 			</div>
 			<div class="pd10 bd_b_eee">
@@ -171,6 +173,7 @@
 
 		</div>
 	</div>
+    {% endblock %}
 </div>
 <script type="text/javascript">
 	function getCookie(cname) {
