--- a/1/mysite/templates/prize/profile.html
+++ b/1/mysite/templates/prize/profile.html
@@ -22,10 +22,10 @@
 				<div class="perleft_menu pdtb_20">
 				<ul>
 					<li class=" "><a href="{% url 'MyOrder' %}"><i class="f_r mcMIcon3 inline"></i>我的订单</a> </li>
-					<li class=" "><a href="/MyCenters/MyRefunds.html"><i class="f_r mcMIcon4 inline"></i>退款管理</a></li>
+					<li class=" "><a href="{% url 'MyRefunds' %}"><i class="f_r mcMIcon4 inline"></i>退款管理</a></li>
 <!--<li class=" "><a href="/MyCenter/MyIncomeRules.html" ><i class="f_r mcMIcon5 inline"></i>我的收益</a></li>-->
-					<li class="a_check "><a href="/MyCenter/Profile.html"><i class="f_r mcMIcon8 inline"></i>个人设置</a></li>
-					<li class=" "><a href="/MyCenter/MyReservation"><i class="f_r mcMIcon14 inline"></i>我的预约</a></li>
+					<li class="a_check "><a href="{% url 'profile' %}"><i class="f_r mcMIcon8 inline"></i>个人设置</a></li>
+					<li class=" "><a href="{% url 'MyReservation' %}"><i class="f_r mcMIcon14 inline"></i>我的预约</a></li>
 					<!-- <div class="div_line"></div> -->
 					<!-- <a href="#"><i class="f_r mcMIcon9 inline"></i>设计师主页</a> <a
 						href="#"><i class="f_r mcMIcon10 inline"></i>设计师提现</a> -->
