--- a/1/mysite/templates/prize/login.html
+++ b/1/mysite/templates/prize/login.html
@@ -7,9 +7,56 @@
 {% endblock %}
 
 {% block body %}
+<script type="application/javascript" >
+ $(function(){ 
+             $("form :input.required").each(function(){ 
+                 var $required = $("<strong class='high'>*</strong>"); 
+                 //$(this).parent().append($required);  //追加到文档中 
+                $(this).parent().prepend($required); 
+             }); 
+             $('form :input').blur(function(){ 
+                 var $parent = $(this).parent(); 
+                 if($(this).is('#username')){ 
+                    if(this.value==""||this.value.length<6){ 
+                       var errorMsg = '请输入至少6位的用户名'; 
+                       $parent.append('<span class="formtips onError">'+errorMsg+'</span>'); 
+                    }else{ 
+                        var okMsg = '输入正确'; 
+                        $parent.append('<span class="formtips onSuccess">'+okMsg+'</span>'); 
+                    } 
+                 } 
+                 if($(this).is('#email')){ 
+                     if(this.value==""||(this.value!=""&&!/.+@.+\.[a-zA-Z]{2,4}$/.test(this.value))){ 
+                         var errorMsg = '请输入正确的E-mail地址'; 
+                         $parent.append('<span class="formtips onError">'+errorMsg+'</span>'); 
+                     }else{ 
+                         var okMsg = '输入正确'; 
+                         $parent.append('<span class="formtips onSuccess">'+okMsg+'</span>'); 
+                     } 
+                 } 
+             }); 
+             $("form :input").focus(function(){ 
+                 var $parent = $(this).parent(); 
+                 $parent.find(".formtips").remove(); 
+             }); 
+             $("#loginButton").click(function(){ 
+                var $parent = $(this).parent().parent(); 
+                $parent.find(".formtips").remove(); 
+                $("form .required:input").trigger('blur'); 
+                var numError = $('form .onError').length; 
+                if(numError){ 
+                   return false; 
+                } 
+             }); 
+             $("#res").click(function(){ 
+                 var $parent = $(this).parent().parent(); 
+                 $parent.find(".formtips").remove(); 
+             }); 
+         });
+</script>
 <div class="wrap h580">
 <div class="loginItem auto ">
-   	<form class="loginBox" method="post" id="J_login" action="{% url 'login' %}">{% csrf_token %}
+   	<form name="form" class="loginBox" method="post" id="J_login" action="{% url 'login' %}" >{% csrf_token %}
    		<div class="inline loginTitBox"><i class="inline loginListBg spIcon mg_r10"></i><span class="inline">用户登录</span></div>
 	   	<dl class="mg_t20 ">
 	   		<!-- <dt class="inline">手机号：</dt> -->
@@ -40,7 +87,7 @@
 	      	<dd class="J_loginTips inline "><span class="col_f90"></span></dd>
 	   	</dl>
 	  	<input type="hidden" id="returnUrlId" name="returnUrl" value="http://badge.biyao.com/man/index.html?f_upd=fb-170">
-	   	<input type="submit" class="J_login_btn loginBtn w400  inline t_c mg_t10" value="登录" id="loginButton"> <br>
+	   	<input type="submit" class="J_login_btn loginBtn w400  inline t_c mg_t10" value="登录" id="loginButton" "> <br>
 	   	<div class="w400 mg_t40">
 	   		<p class="sizeZero">
 	   			<span class="col_666 f14 mg_r10 inline">使用第三方账号登录：</span>
