--- a/1/mysite/templates/prize/login.html
+++ b/1/mysite/templates/prize/login.html
@@ -7,68 +7,113 @@
 {% endblock %}
 
 {% block body %}
-<script type="application/javascript" >
- $(function(){ 
-             $("form :input.required").each(function(){ 
-                 var $required = $("<strong class='high'>*</strong>"); 
-                 //$(this).parent().append($required);  //追加到文档中 
-                $(this).parent().prepend($required); 
-             }); 
-             $('form :input').blur(function(){ 
-                 var $parent = $(this).parent(); 
-                 if($(this).is('#username')){ 
-                    if(this.value==""||this.value.length<6){ 
-                       var errorMsg = '请输入至少6位的用户名'; 
-                       $parent.append('<span class="formtips onError">'+errorMsg+'</span>'); 
-                    }else{ 
-                        var okMsg = '输入正确'; 
-                        $parent.append('<span class="formtips onSuccess">'+okMsg+'</span>'); 
-                    } 
-                 } 
-                 if($(this).is('#email')){ 
-                     if(this.value==""||(this.value!=""&&!/.+@.+\.[a-zA-Z]{2,4}$/.test(this.value))){ 
-                         var errorMsg = '请输入正确的E-mail地址'; 
-                         $parent.append('<span class="formtips onError">'+errorMsg+'</span>'); 
-                     }else{ 
-                         var okMsg = '输入正确'; 
-                         $parent.append('<span class="formtips onSuccess">'+okMsg+'</span>'); 
-                     } 
-                 } 
-             }); 
-             $("form :input").focus(function(){ 
-                 var $parent = $(this).parent(); 
-                 $parent.find(".formtips").remove(); 
-             }); 
-             $("#loginButton").click(function(){ 
-                var $parent = $(this).parent().parent(); 
-                $parent.find(".formtips").remove(); 
-                $("form .required:input").trigger('blur'); 
-                var numError = $('form .onError').length; 
-                if(numError){ 
-                   return false; 
+
+ <script type="text/javascript">
+//<![CDATA[
+$(function(){
+        /*
+        *思路大概是先为每一个required添加必填的标记，用each()方法来实现。
+        *在each()方法中先是创建一个元素。然后通过append()方法将创建的元素加入到父元素后面。
+        *这里面的this用的很精髓，每一次的this都对应着相应的input元素，然后获取相应的父元素。
+        *然后为input元素添加失去焦点事件。然后进行用户名、邮件的验证。
+        *这里用了一个判断is()，如果是用户名，做相应的处理，如果是邮件做相应的验证。
+        *在jQuery框架中，也可以适当的穿插一写原汁原味的javascript代码。比如验证用户名中就有this.value，和this.value.length。对内容进行判断。
+        *然后进行的是邮件的验证，貌似用到了正则表达式。
+        *然后为input元素添加keyup事件与focus事件。就是在keyup时也要做一下验证，调用blur事件就行了。用triggerHandler()触发器，触发相应的事件。
+        *最后提交表单时做统一验证
+        *做好整体与细节的处理
+        */
+        //如果是必填的，则加红星标识.
+        $("form :input.required").each(function(){
+            var $required = $("<strong class='high'> *</strong>"); //创建元素
+            $(this).parent().append($required); //然后将它追加到文档中
+        });
+         //文本框失去焦点后
+        $('form :input').blur(function(){
+             var $parent = $(this).parent();
+             //$parent.find(".formtips").remove();
+             //验证用户名
+             if( $(this).is('#username') ){
+				 $parent.find(".formtips").remove();
+				    
+					
+                    if( this.value=="" || this.value.length < 6 ){
+                        var errorMsg = '请输入至少6位的用户名.';
+                        $parent.append('<span class="formtips onError">'+errorMsg+'</span>');
+                    }else{
+                        var okMsg = '输入正确.';
+                        $parent.append('<span class="formtips onSuccess">'+okMsg+'</span>');
+                    }
+             }
+             //验证邮件
+             /*if( $(this).is('#email') ){
+                if( this.value=="" || ( this.value!="" && !/.+@.+\.[a-zA-Z]{2,4}$/.test(this.value) ) ){
+                      var errorMsg = '请输入正确的E-Mail地址.';
+                      $parent.append('<span class="formtips onError">'+errorMsg+'</span>');
+                }else{
+                      var okMsg = '输入正确.';
+                      $parent.append('<span class="formtips onSuccess">'+okMsg+'</span>');
+                }
+             }*/
+			 if( $(this).is('#passwd1') ){
+				$parent.find(".formtips").remove();
+                    if( this.value=="" || this.value.length < 6 ){
+                        var errorMsg = '请输入正确的密码.';
+                        $parent.append('<span class="formtips onError">'+errorMsg+'</span>');
+                    }else{
+                        var okMsg = '输入正确.';
+                        $parent.append('<span class="formtips onSuccess">'+okMsg+'</span>');
+                    }
+			 
+             }
+        }).keyup(function(){
+           $(this).triggerHandler("blur");
+        }).focus(function(){
+             $(this).triggerHandler("blur");
+        });//end blur
+
+        
+        //提交，最终验证。
+         $('#send').click(function(){
+			 	if ($('form #username').value=="")
+				{alert("用户名或密码不对.");
+                    return false;}
+				else ($('form #passwd1').value=="")
+				{
+					alert("用户名或密码不对.");
+                    return false;
+				}
+                $("form :input.required").trigger('blur');
+                var numError = $('form .onError').length;
+				
+                if(numError){
+					alert("用户名或密码不对.");
+                    return false;
                 } 
-             }); 
-             $("#res").click(function(){ 
-                 var $parent = $(this).parent().parent(); 
-                 $parent.find(".formtips").remove(); 
-             }); 
+                
          });
+		
+
+        
+})
+//]]>
 </script>
+
 <div class="wrap h580">
 <div class="loginItem auto ">
    	<form name="form" class="loginBox" method="post" id="J_login" action="{% url 'login' %}" >{% csrf_token %}
    		<div class="inline loginTitBox"><i class="inline loginListBg spIcon mg_r10"></i><span class="inline">用户登录</span></div>
 	   	<dl class="mg_t20 ">
 	   		<!-- <dt class="inline">手机号：</dt> -->
-	   		<dd class="inline mg_r5"><input id="username" value="请输入您的手机号码" type="text" name="userName" class=" loginTxt  w360 col_999"></dd>
-	        <dd class="J_validate inline col_f90 "><i class="tip_erorr inline"></i>请输入正确的用户名</dd>
+	   		<dd class="inline mg_r5"><input id="username" value="" type="text" name="userName" class=" loginTxt  w360 col_999"></dd>
+	        <dd class="J_validate inline col_f90 "><i class="tip_erorr inline"></i></dd>
 	   	</dl>
 	   	<dl class=" mg_t20 ">
 	   		<dd class="inline mg_r5">
-	   			<input id="passwd1" type="password" name="password" onblur="blankTest();" class="loginTxt w360 col_999 none">
-	   			<input id="passwd_show" type="text"  value="请输入您的密码" class="loginTxt w360 col_999">
+	   			<input id="passwd1" type="password" name="password"  class="loginTxt w360 col_999">
+	   			
 	   		</dd>
-	        <dd class="J_validate inline col_f90"><i class="tip_erorr inline"></i>请输入密码且不能包含空格</dd>
+	        <dd class="J_validate inline col_f90"><i class="tip_erorr inline"></i></dd>
 	   	</dl>
 	   	<dl class="mg_t20 sizeZero none" id="authCode">
 	   		<dd class="inline mg_r20"><input value="请填写右侧的验证码" type="text" name="" id="checkNum" class="loginTxt w160 col_999" maxlength="4"></dd>
@@ -87,7 +132,7 @@
 	      	<dd class="J_loginTips inline "><span class="col_f90"></span></dd>
 	   	</dl>
 	  	<input type="hidden" id="returnUrlId" name="returnUrl" value="http://badge.biyao.com/man/index.html?f_upd=fb-170">
-	   	<input type="submit" class="J_login_btn loginBtn w400  inline t_c mg_t10" value="登录" id="loginButton" "> <br>
+	   	<input  type="submit" class="J_login_btn loginBtn w400  inline t_c mg_t10" value="登录" id="send"> <br>
 	   	<div class="w400 mg_t40">
 	   		<p class="sizeZero">
 	   			<span class="col_666 f14 mg_r10 inline">使用第三方账号登录：</span>
@@ -123,55 +168,8 @@
   }
 });
 </script>
-<!--
- <script type="text/javascript">
-$(document).ready(function(){
-
-  $("#loginButton").click(function(){
 
 
-	 $.post("{% url 'login' %}",
-	  {
-		userName:$("#username").val(),
-		password:$("#passwd1").val()
-	  },
-	  function(data,status){
-		//alert("Data: " + data + "\nStatus: " + status);
-	  });
-
-});
-
-});
-</script>
--->
-<script type="text/javascript">
-	$(function(){
-
-	 	 $(".loginTxt").focus(function(){
-				 if ($(this).val() == $(this)[0].defaultValue) {
-					    $(this).val("");
-				  }
-
-			});
-
-	 	 	$("#passwd_show").focus(function(){
-	 	 		$(this).addClass("none");
-	 	 		$("#passwd1").removeClass("none").focus();
-	 	 	});
-	 	 	$("#passwd1").blur(function(){
-	 	 		if ($.trim($(this).val()) == "") {
-		 	 		$("#passwd_show").removeClass("none");
-		 	 		$(this).addClass("none")
-		 	 	}
-	 	 	});
-			$(".loginTxt").blur(function(){
-				  if ($.trim($(this).val()) == "") {
-					    $(this).val($(this)[0].defaultValue);
-					   }
-			});
-	});
-
-</script>
 
 
 <script type="text/javascript">
