--- a/1/mysite/templates/prize/login.html
+++ b/1/mysite/templates/prize/login.html
@@ -75,10 +75,10 @@ $(function(){
         
         //提交，最终验证。
          $('#send').click(function(){
-			 	if ($('form #username').value=="")
-				{alert("用户名或密码不对.");
+			 	if ($('form #username').val()=="")
+				{alert("用户名不对.");
                     return false;}
-				else ($('form #passwd1').value=="")
+				else ($('form #passwd1').val()=="")
 				{
 					alert("用户名或密码不对.");
                     return false;
