--- a/1/mysite/templates/prize/ChangePassword.html
+++ b/1/mysite/templates/prize/ChangePassword.html
@@ -12,7 +12,7 @@
 				</h3>
 			</div>
 			<div class="pd10">
-			<form action="/MyCenter/ChangePasswordValueByAjax" method="post" id="form1">
+			<form action="{% url 'ChangePassword' %}" method="post" id="form1">{% csrf_token %}
 					<table cellspacing="0" class="per_table th80">
 						<tbody><tr>
 							<th>旧密码：</th>
@@ -28,12 +28,21 @@
 						</tr>
 						<tr>
 							<th></th>
-							<td height="80"> <a class="btnCom1 btnComS btnBg2 btnH1 w80 inline J_release"><span>确 定</span></a></td>
+							<td height="80"><input type="submit" value="确定"  class="btnCom1 btnComS btnBg2 btnH1 w80 inline J_release"/></td>
 						</tr>
 						</tbody>
 					</table>
 				</form>
+                <p>{{ login_err }}</p>
 			</div>
 		</div>
 	</div>
+    <script type="text/javascript">
+ $.ajaxSetup({
+  beforeSend: function(xhr, settings){
+      var csrftoken = $.cookie('csrftoken');
+      xhr.setRequestHeader("X-CSRFToken", csrftoken);
+  }
+});
+</script>
 {% endblock %}
